[tool.poetry]
name = "rlt_test"
version = "0.1.0"
description = ""
authors = ["Roman Pavliuchenko <romanpavlyuchenko@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"
aiogram = "^2.21"
pydantic-settings = "^2.0.3"
pymongo = "^4.6.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
